test/invalid/subtype.pks
// error: Interactable::Boulder is not NPC|WildPokemon, cannot be engaged in battle
goal bad {
    engage(Interactable::Boulder, Strategy::Aggressive);
}
